<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/subtitle" />

    <ScrollView
        android:id="@+id/editor_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar_selector"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    style="@style/contentTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_title_editor" />

                <EditText
                    android:id="@+id/title_editor"
                    style="@style/contentText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/my_edittext"
                    android:hint="@string/act_title_hint_editor"
                    android:paddingLeft="5dip"
                    android:singleLine="true" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/introduce_text"
                    style="@style/contentTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/act_introduce_editor" />

                <EditText
                    android:id="@+id/introduce_editor"
                    style="@style/contentText"
                    android:layout_width="match_parent"
                    android:layout_height="200dip"
                    android:layout_toRightOf="@+id/introduce_text"
                    android:background="@drawable/my_edittext"
                    android:gravity="top"
                    android:hint="@string/act_introduce_hint_editor"
                    android:paddingLeft="5dip"
                    android:paddingTop="5dip" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar_selector"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    style="@style/contentTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/act_classify_editor" />

                <Spinner
                    android:id="@+id/classify_editor"
                    style="@style/contentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_classify_selector"
                    android:paddingLeft="5dip" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar_timestart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar_selector"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/contentTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/act_timestart_editor" />

                <TextView
                    android:id="@+id/start_date"
                    style="@style/contentText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dip" />

                <TextView
                    android:id="@+id/start_time"
                    style="@style/contentText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dip" />

                <Button
                    android:id="@+id/btn_timestart_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/more_act_selector" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bar_timeend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar_selector"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/contentTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/act_timeend_editor" />

                <TextView
                    android:id="@+id/end_date"
                    style="@style/contentText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dip" />

                <TextView
                    android:id="@+id/end_time"
                    style="@style/contentText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dip" />

                <Button
                    android:id="@+id/btn_timeend_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/more_act_selector" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar_selector"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    style="@style/contentTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:text="@string/act_location_editor" />

                <EditText
                    android:id="@+id/location_editor"
                    style="@style/contentText"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/my_edittext"
                    android:hint="@string/act_title_hint_editor"
                    android:paddingLeft="5dip"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/btn_location_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="0"
                    android:background="@drawable/location_act_selector" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bar_selector"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/poster_text"
                    style="@style/contentTextLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/act_poster_editor" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/poster_text"
                    android:background="@drawable/poster_bg"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/poster_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_poster_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/more_act_selector" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/bar_friends_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bar_selector"
                    android:orientation="horizontal"
                    android:padding="5dip" >

                    <TextView
                        style="@style/contentTextLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/act_friends_editor" />

                    <Button
                        android:id="@+id/btn_friends_editor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/more_act_selector" />
                </RelativeLayout>

                <include
                    android:id="@+id/friends_list"
                    layout="@layout/act_friends_layout" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dip" >

                <ImageView
                    android:id="@+id/limit_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:background="@drawable/checkbox_unselected" />

                <TextView
                    android:id="@+id/limit_View"
                    style="@style/contentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/act_limit_editor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/detail_bottom_bg"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_publish"
                    style="@style/contentTextLarge"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_item_selector"
                    android:gravity="center"
                    android:text="@string/act_publish_editor" />

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/contentTextLarge"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bottom_item_selector"
                    android:gravity="center"
                    android:text="@string/act_cancel_editor" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>