<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/title"
        layout="@layout/subtitle" />

    <include
        android:id="@+id/search"
        layout="@layout/searchbox" />

    <TextView
        android:id="@+id/friends_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dip"
        android:paddingLeft="10dip" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip" 
        android:background="@drawable/title_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bottom_item_selector"
            android:text="@string/select_all" />

        <ImageView
            android:id="@+id/select_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dip"
            android:background="@drawable/checkbox_unselected" />
    </RelativeLayout>

    <ListView
        android:id="@+id/myfriends_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:cacheColorHint="#00000000"
        android:listSelector="@drawable/list_item_selector"
        android:divider="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/detail_bottom_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_item_selector"
            android:gravity="center"
            android:text="@string/act_confirm_editor" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bottom_item_selector"
            android:gravity="center"
            android:text="@string/act_cancel_editor" />
    </LinearLayout>

</LinearLayout>